# SDRPlusPlus

./: CMakeLists.txt  PYTHON_BINDING.md
core/: CMakeLists.txt
python_swig_bindings/: CMakeLists.txt  build_and_test.bat  build_module.bat  sdrplay_standalone.py  sdrpp_core.i  sdrpp_minimal.i
python_swig_bindings/common/: json_helper.h  json_typemap.i  stream_wrapper.h  volk_mock.h
python_swig_bindings/dsp/: stream.i
python_swig_bindings/managers/: config_manager.i  source_manager.i  vfo_manager.i
python_swig_bindings/tests/: sdrplay_tester.py  test_sdrplay.py  test_sdrplay_advanced.py  test_sdrplay_basic.py
